--- a/css/style.css
+++ b/css/style.css
@@ -90,11 +90,21 @@ body {
 
 .hidden {
   visibility: hidden;
+  position: absolute;
+}
+ /* Grid */
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 /* Header */
 .page-header {
-  background-color: var(--basic-lightgray); 
+  background-color: var(--basic-lightgray);
+  display: grid;
+  grid-template-rows: min-content; 
 
 }
 
@@ -116,10 +126,18 @@ opacity: 0.3;
   font-weight: 500;
   text-transform: uppercase;
   background-color: transparent;
+  display: grid;
+  min-width: 1157px;
+  margin: 0 auto;
+  padding-top: 48px;
+  grid-template-columns: max-content 1fr min-content;
 }
 
 .site-navigaton {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  justify-self: center;
 }
 
 .site-navigaton a,
@@ -138,12 +156,23 @@ opacity: 0.3;
   opacity: 0.3;
 }
 
+.main-wrapper {
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+}
 
 /* Advantages */
+.advantages-container {
+  background-color: var(--basic-lightgray);
+  display: grid;
+  grid-template-rows: 1fr;;
+}
 
 .advantages {
   text-align: left;
-  background-color: var(--basic-lightgray);
+  width: 1157px;
+  margin: 0 auto;
+  
 
 }
 
@@ -177,10 +206,22 @@ opacity: 0.3;
 /* Features */
 .features {
   text-align: left;
+  width: 1157px;
+  margin: 80px auto 80px auto;
+  
 }
 
 .features-list {
   list-style: none;
+  margin: 0;
+  padding: 0 60px 0 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 100px;
+}
+
+.features-list:last-child {
+  margin: 0 60px 0 0;
 }
 
 .features-list-item h3 {
@@ -246,6 +287,11 @@ opacity: 0.3;
 
 .about-us {
   text-align: left;
+  width: 1157px;
+  margin: 37px auto 73px auto;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 149px;
 }
 
 .about-us img {
@@ -263,8 +309,9 @@ opacity: 0.3;
 }
 
 .about-us p:last-of-type {
+  font-size:16px;
+  line-height: 24px;
   font-weight: bold;
-  text-align: center;
 }
 
 /* Table */
@@ -288,9 +335,17 @@ opacity: 0.3;
 }
 
 /* Partner */
+.partners {
+  width: 1157px;
+  margin: 46px auto 44px auto;
+}
 
 .partner-logo-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .logo-list-item img {
@@ -307,12 +362,25 @@ opacity: 0.3;
 
 /* Page-footer */
 
+.page-footer {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  margin: 80px 0 0 0;
+}
+
 .footer-write-us {
 background-color: var(--basic-map-gray);
 }
 
+.contacts-container {
+  display: grid;
+  grid-template-rows: 1fr;
+  width: 1157px;
+  margin: 54px auto 54px auto;
+}
 .contacts {
   background-color: var(--basic-white);
+  width: 319px;
 }
 .footer-write-us p:first-of-type {
   font-size: 18px;
@@ -344,9 +412,18 @@ background-color: var(--basic-map-gray);
 
 /* Social-link */
 
+.footer-social-link {
+  display: grid;
+  width: 1157px;
+  margin: 68px auto 68px auto;
+  grid-template-columns: 1fr 2fr;
+}
+
 
 .social-link-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .link-list-item .button {
