--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
   font-style: normal;
   font-weight: 400;
   src: local("Roboto"), local("Roboto-Regular"),
-  url("../fonts/roboto.woff2") format("woff2"),
-  url("../fonts/roboto.woff") format("woff");
+    url("../fonts/roboto.woff2") format("woff2"),
+    url("../fonts/roboto.woff") format("woff");
 
 }
 
@@ -15,8 +15,8 @@
   font-style: normal;
   font-weight: 500;
   src: local("Roboto"), local("Roboto-Medium"),
-  url("../fonts/robotomedium.woff2") format("woff2"),
-  url("../fonts/robotomedium.woff") format("woff");
+    url("../fonts/robotomedium.woff2") format("woff2"),
+    url("../fonts/robotomedium.woff") format("woff");
 }
 
 @font-face {
@@ -24,9 +24,10 @@
   font-style: normal;
   font-weight: 700;
   src: local("Roboto"), local("Roboto-Bold"),
-  url("../fonts/robotobold.woff2") format("woff2"),
-  url("../fonts/robotobold.woff") format("woff");
+    url("../fonts/robotobold.woff2") format("woff2"),
+    url("../fonts/robotobold.woff") format("woff");
 }
+
 /* Variables */
 
 :root {
@@ -52,13 +53,13 @@
 
   --special-more-green: #00BC6C;
   --special-dark-green: #00AA62;
-  
+
   --special-more-yellow: #EAB534;
   --special-dark-yellow: #E5A722;
 
   --special-opacity-white: rgba(255, 255, 255, 0.3);
 
-  
+
   /* Map */
 
   --basic-map-gray: #e9e5dc;
@@ -91,7 +92,8 @@ body {
   visibility: hidden;
   position: absolute;
 }
- /* Grid */
+
+/* Grid */
 .page-body {
   min-height: 100%;
   display: grid;
@@ -109,7 +111,7 @@ body {
 }
 
 .page-header-logo:active img {
-opacity: 0.3;
+  opacity: 0.3;
 }
 
 
@@ -125,22 +127,28 @@ opacity: 0.3;
   line-height: 30px;
   font-weight: 500;
   text-transform: uppercase;
-  background-color: transparent;
-  display: grid;
-  padding-top: 48px;
-  grid-template-columns: max-content 1fr min-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 49px;
 }
+  
 
 .site-navigaton {
   list-style: none;
   margin: 0;
   padding: 0;
   justify-self: center;
+  margin-bottom: 9px;
 }
 
-.site-navigaton li {
+.user-navigation {
+  margin-bottom: 9px;
+}
+
+  .site-navigaton li {
   display: inline-block;
-  padding-right: 45px;
+  margin-right: 45px; 
 }
 
 .site-navigaton a,
@@ -164,24 +172,21 @@ opacity: 0.3;
   grid-template-rows: auto auto auto auto;
 }
 
-  .container {
-    width: 1157px;
-    margin: 0 auto;
-  }
+.container {
+  width: 1157px;
+  margin: 0 auto;
+}
 
 /* Advantages */
 .advantages-container {
   background-color: var(--basic-lightgray);
-  display: grid;
-  grid-template-rows: 1fr;;
+  margin-bottom: 80px;
 }
 
 .advantages {
   text-align: left;
   width: 1157px;
   margin: 0 auto;
-
-
 }
 
 .slogan {
@@ -214,21 +219,33 @@ opacity: 0.3;
 /* Features */
 .features {
   text-align: left;
-  margin: 80px auto;
-  
+  margin: 0 auto 101px auto;
+
 }
 
 .features-list {
   list-style: none;
-  margin: 0;
-  padding: 0 60px 0 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 100px;
+  margin: 0 0 80px 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+ }
+
+.features-list li:nth-child(3n) {
+  margin-right: 0;
 }
 
-.features-list:last-child {
-  margin: 0 60px 0 0;
+.features-list-item {
+  width: 300px;
+  margin-right: 100px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.features-list-item p {
+  width: 260px;
 }
 
 .features-list-item h3 {
@@ -236,6 +253,7 @@ opacity: 0.3;
   line-height: 30px;
   font-weight: bold;
   text-transform: uppercase;
+  margin: 0;
 }
 
 /* Features button */
@@ -250,8 +268,9 @@ opacity: 0.3;
   text-transform: uppercase;
   color: var(--basic-white);
   border: none;
+  margin: 16px 0;
 }
-  
+
 
 .features-list-item:first-child .button:link {
   background-color: var(--basic-red);
@@ -293,46 +312,63 @@ opacity: 0.3;
 }
 
 .about-us {
-  text-align: left;
-  margin: 37px auto 73px auto;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 149px;
+  margin-bottom: 73px; 
 }
 
 .about-us img {
   background-color: var(--basic-gray);
+  margin-bottom: 37px;
 }
 
-.about-us p:first-of-type {
-  font-size: 54px;
-  line-height: 54px;
+.about-us-left-column p:first-child {
+  font-size: 45px;
+  line-height: 45px;
   font-weight: 500;
+  margin: 39px 0 32px;
+  padding: 0;
 }
 
-.about-us p:nth-of-type(3) {
+.about-us-left-column p:nth-child(2) {
+  margin-bottom: 40px;
+}
+
+.about-us-left-column p:nth-child(3) {
   font-weight: bold;
+  margin-bottom: 23px;
 }
 
-.about-us p:last-of-type {
-  font-size:16px;
+.about-us-right-column p {
+
+  font-size: 16px;
   line-height: 24px;
   font-weight: bold;
+  margin: 0 0 31px 0;
+  margin-left: 19px;
 }
 
+.services-list li {
+  margin-bottom: 37px;
+}
 /* Table */
 
 .features-table .data {
   font-size: 45px;
   line-height: 64px;
   font-weight: bold;
-  ;
+  padding-right: 22px;
+  padding-bottom: 27px;
+  
 }
 
 .features-table .percent {
   font-size: 26px;
   line-height: 40px;
   font-weight: bold;
+  vertical-align: text-top;
 }
 
 .features-table .text {
@@ -342,19 +378,31 @@ opacity: 0.3;
 
 /* Partner */
 .partners {
-  margin: 46px auto 44px auto;
+  margin: 0 auto 80px auto;
 }
 
 .partner-logo-list {
+  height: 180px;
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid var(--basic-lightgray);
+  border-bottom: 2px solid var(--basic-lightgray);
+}
+
+.partner-logo-list li {
+  width: 209px;
+}
+
+.partner-logo-list li:first-child {
+  margin-left: 32px;
 }
 
 .logo-list-item img {
-  opacity: 0.2;  
+  opacity: 0.2;
 }
 
 .logo-list-item .nohover:hover {
@@ -370,23 +418,45 @@ opacity: 0.3;
 .page-footer {
   display: grid;
   grid-template-rows: 1fr 1fr;
-  margin: 80px 0 0 0;
 }
 
 .footer-write-us {
-background-color: var(--basic-map-gray);
+  background-color: var(--basic-map-gray);
+  height: 416px;
 }
 
 .contacts-container {
-  display: grid;
-  grid-template-rows: 1fr;
   width: 1157px;
-  margin: 54px auto;
+  display: flex;
+  margin: 0 auto;
 }
+
 .contacts {
   background-color: var(--basic-white);
   width: 319px;
+  height: 308px;
+  margin: 54px 0;
+  display: flex;
+  flex-direction: column;
 }
+
+.contacts p {
+  margin: 0 0 0 50px;
+}
+
+.contacts p:first-child {
+  margin-top: 49px;
+  margin-bottom: 23px;
+}
+
+.contacts p:nth-child(2) {
+  margin-bottom: 23px;
+}
+
+.contacts p:nth-child(3) {
+  margin-bottom: 37px;
+}
+
 .footer-write-us p:first-of-type {
   font-size: 18px;
   line-height: 30px;
@@ -403,7 +473,7 @@ background-color: var(--basic-map-gray);
 }
 
 .footer-write-us .button {
-  font: inherit; 
+  font: inherit;
   font-size: 16px;
   line-height: 18px;
   font-weight: bold;
@@ -413,15 +483,16 @@ background-color: var(--basic-map-gray);
   color: var(--basic-white);
   background-color: var(--basic-red);
   border: none;
+  margin: 0 auto;
 }
 
 /* Social-link */
 
 .footer-social-link {
-  display: grid;
   width: 1157px;
-  margin: 68px auto;
-  grid-template-columns: 1fr 2fr;
+  height: 217px;
+  display: flex;
+  align-items: center;
 }
 
 
@@ -447,6 +518,10 @@ background-color: var(--basic-map-gray);
 
 .link-list-item .button:active {
   background: linear-gradient(0deg, #D7373B, #D7373B);
+}
+
+.footer-social-text-container {
+  margin-left: 140px;
 }
 
 .footer-social-link p:first-of-type {
@@ -502,7 +577,7 @@ background-color: var(--basic-map-gray);
   background-color: var(--basic-white);
   grid-column-start: 2;
   grid-column-end: 4;
-  
+
 }
 
 .sorting-products p {
@@ -535,7 +610,7 @@ background-color: var(--basic-map-gray);
 .list-products-section {
   grid-column-start: 2;
   grid-column-end: 4;
-  
+
 }
 
 .list-view-products {
@@ -596,11 +671,11 @@ background-color: var(--basic-map-gray);
   text-transform: uppercase;
   color: var(--basic-black);
   background-color: var(--basic-lightgray);
-  border:none;
+  border: none;
 }
 
 .list-page-button .button:hover {
- background-color: var(--special-page-button-lightgray);
+  background-color: var(--special-page-button-lightgray);
 }
 
 .list-page-button .button:active {
@@ -611,4 +686,3 @@ background-color: var(--basic-map-gray);
 .list-page-button .button.here:link {
   background-color: rgba(0, 0, 0, 0.0001);
 }
-
