Добавил декоративные элементы в блок сортировки catalog.html

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@
   --special-page-button-lightgray: #DFDFDF;
   --special-page-button-more-gray: #D5D5D5;
   --special-page-button-opacity: rgba(0, 0, 0, 0.0001);
+  --special-page-button-shadow: #DBDBDB;
+  
+  --special-current-button-background: rgba(0, 0, 0, 0.0001);
 
   --special-more-green: #00BC6C;
   --special-dark-green: #00AA62;
@@ -58,6 +61,7 @@
   --special-dark-yellow: #E5A722;
 
   --special-opacity-white: rgba(255, 255, 255, 0.3);
+
 
 
   /* Map */
@@ -175,7 +179,7 @@ body {
   position: absolute;
   width: 15px;
   height: 15px;
-  background-image: url("/img/cart-icon.svg");
+  background-image: url("../img/cart-icon.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
   left: 0;
@@ -300,7 +304,7 @@ body {
   height: 431px;
   top: -6px;
   left: 398px;
-  background-image: url("/img/nerds-index-slide1-1.png");
+  background-image: url("../img/nerds-index-slide1-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
 } 
@@ -312,7 +316,7 @@ body {
   height: 431px;
   top: -6px;
   left: 398px;
-  background-image: url("/img/nerds-index-slide2-1.png");
+  background-image: url("../img/nerds-index-slide2-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
 }
@@ -324,7 +328,7 @@ body {
   height: 431px;
   top: -6px;
   left: 398px;
-  background-image: url("/img/nerds-index-slide3-1.png");
+  background-image: url("../img/nerds-index-slide3-1.png");
   background-repeat: no-repeat;
   background-position: 100% 100%;
 }
@@ -381,7 +385,7 @@ body {
   position: absolute;
   width: 300px;
   height: 146px;
-  background-image: url("/img/illustration-1-1.png");
+  background-image: url("../img/illustration-1-1.png");
   background-repeat: no-repeat;
   background-position: 50% 0;
   top: 0;
@@ -393,7 +397,7 @@ body {
   position: absolute;
   width: 300px;
   height: 146px;
-  background-image: url("/img/illustration-2-1.png");
+  background-image: url("../img/illustration-2-1.png");
   background-repeat: no-repeat;
   background-position: 50% 0;
   top: 0;
@@ -405,7 +409,7 @@ body {
   position: absolute;
   width: 300px;
   height: 146px;
-  background-image: url("/img/illustration-3-1.png");
+  background-image: url("../img/illustration-3-1.png");
   background-repeat: no-repeat;
   background-position: 50% 0;
   top: 0;
@@ -654,7 +658,7 @@ body {
  /* Временная карта */
 .footer-write-us {
   background-color: var(--basic-map-gray);
-  background-image: url("/img/map-1.png");
+  background-image: url("../img/map-1.png");
   width: 1440px;
   height: 416px;
   background-repeat: no-repeat;
@@ -686,7 +690,7 @@ body {
   height: 190px;
   left: 682px;
   top: 32px;
-  background-image: url("/img/map-marker-1.png");
+  background-image: url("../img/map-marker-1.png");
   background-repeat: no-repeat;
 } 
 
@@ -780,7 +784,7 @@ body {
   height: 15px;
   top: 32px;
   left: 27px;
-  background-image: url("/img/vk-icon.svg");
+  background-image: url("../img/vk-icon.svg");
   background-repeat: no-repeat;
   background-position: 50% 0;
 }
@@ -792,7 +796,7 @@ body {
   height: 22px;
   top: 30px;
   left: 34px;
-  background-image: url("/img/fb-icon.svg");
+  background-image: url("../img/fb-icon.svg");
   background-repeat: no-repeat;
   background-position: 50% 0;
 }
@@ -804,7 +808,7 @@ body {
   height: 21px;
   top: 30px;
   left: 30px;
-  background-image: url("/img/insta-icon.svg");
+  background-image: url("../img/insta-icon.svg");
   background-repeat: no-repeat;
   background-position: 50% 0;
 }
@@ -869,6 +873,7 @@ body {
 }
 
 /* Sorting products */
+
 .list-sorting-products,
 .list-sorting-arrows,
 .list-view-products,
@@ -895,7 +900,7 @@ body {
   grid-column-start: 2;
   grid-column-end: 3;
   display: flex;
-  align-items: center;
+  align-items: baseline;
 
 }
 
@@ -935,21 +940,49 @@ body {
 }
 
 .list-view-products li {
-  margin-top: 40px;
+  padding-top: 40px;
   margin-bottom: 30px;
+  height: 578px;
+  width: 358px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
 }
+
+/* .list-view-products img {
+  display: none;
+} */
 
 .list-view-products li:nth-last-child(-n+2) {
   margin-bottom: 0;
 }
 
-.list-page-button {
-  display: flex;
+
+.arrow-down,
+.arrow-up {
+  position: relative;
 }
 
-.list-page-button li {
-  margin: 55px 11px 60px;
+.arrow-down::before {
+  content: "";
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: -11px; 
+  background-image: url("../img/icon-down-dir.svg");
+  background-repeat: no-repeat;
+
 }
+
+.arrow-up::before {
+  content: "";
+  position: absolute;
+  width: 11px;
+  height: 10px;
+  top: -11px;
+  left: 11px;
+  background-image: url("../img/icon-up-dir.svg");
+  background-repeat: no-repeat;
+} 
 
 .list-sorting-products a,
 .list-sorting-arrows a {
@@ -981,6 +1014,30 @@ body {
 .list-view-products img {
   background-color: var(--basic-gray);
 }
+
+.list-page-button {
+  display: flex;
+}
+
+.list-page-button li {
+ margin: 50px 11px 60px 0;
+}
+
+.page-button-item .button{
+  display: block;
+  padding: 17px 20px 15px 20px;
+  border-radius: 3px;
+}
+
+.page-button-item:last-child .button {
+  padding: 17px 77px 15px 78px;
+}
+
+.page-button-item.current-page .button {
+  background-color: var(--special-current-button-background);
+  box-shadow: inset 0 0 0 3px var(--special-page-button-shadow);
+}
+
 
 .list-page-button .button {
   font: inherit;
